Fixing modal transition on mobile devices

--- a/src/components/works/modals/Modal.css
+++ b/src/components/works/modals/Modal.css
@@ -16,11 +16,6 @@ button{
 }
 .modal.is-open{
     display: flex;
-    opacity: .6;
-    transition: ease .15s;
-}
-.is-open:hover{
-    opacity: 1;
 }
 .modal-container{
     max-width: 1300px;
@@ -101,6 +96,16 @@ button{
     border: 2px solid var(--color-purple);
     border-radius: 5px;
     box-shadow: 0px 0px 5.4px 3.8px rgba(86, 14, 135, 0.5);
+}
+@media(min-width: 1023px){
+    .modal.is-open{
+        display: flex;
+        opacity: .6;
+        transition: ease .15s;
+    }
+    .is-open:hover{
+        opacity: 1;
+    }
 }
 @media (max-width: 768px){
     .modal-container{
